--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,19 +24,28 @@ html {
     transition: opacity 0.5s ease-in-out;
     opacity: 1;
 }
-
-#myVideo {
-    position: fixed;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-}
-
-#music {
-    display: None
-}
+    .myVideo {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      overflow: hidden;
+    }
+    
+    #myVideo {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      transform: translate(-50%, -50%);
+    }
+    #music {
+        display: None
+    }
 
 .container {
     background: transparent;
